--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -364,6 +364,19 @@
         <item>"/system/lib64/libsurfaceflinger.so"</item>
     </string-array>
 
+    <!-- List of files pinned by the Pinner Service with the apex boot image b/119800099 -->
+    <string-array translatable="false" name="config_apexBootImagePinnerServiceFiles">
+        <item>"/system/framework/framework.jar"</item> 
+        <item>"/system/framework/services.jar"</item> 
+        <item>"/system/framework/arm64/apex.oat"</item> 
+        <item>"/system/framework/arm64/apex-core-libart.oat"</item> 
+        <item>"/apex/com.android.runtime/javalib/core-oj.jar"</item> 
+        <item>"/apex/com.android.runtime/javalib/core-libart.jar"</item> 
+        <item>"/apex/com.android.media/javalib/updatable-media.jar"</item> 
+        <item>"/system/priv-app/SystemUIGoogle/SystemUIGoogle.apk"</item> 
+        <item>"/system/lib64/libsurfaceflinger.so"</item>
+    </string-array>
+
     <!-- Enables or disables haptic effect when the text insertion/selection handle is moved
          manually by the user. Off by default, since the expected haptic feedback may not be
          available on some devices. -->
