land: overlay: Enable Fast BSS Transition
FastTransition is enabled by default in qcacld thus advertise it to Android.
Remove wifi buffers overlay while at it because it's set by common fwb.

Signed-off-by: xNombre <kartapolska@gmail.com>
Change-Id: Id237a83f90af6bec21e07871e567306c69f1298c

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -107,6 +107,9 @@
          capability can provide power savings when wifi needs to be always kept on. -->
     <bool name="config_wifi_background_scan_support">true</bool>
 
+    <!-- Boolean indicating whether 802.11r Fast BSS Transition is enabled on this platform -->
+    <bool translatable="false" name="config_wifi_fast_bss_transition_enabled">true</bool>
+
     <!-- When true, the tethering upstream network follows the current default
          Internet network (except when the current default network is mobile,
          in which case a DUN network will be used if required). -->
@@ -286,10 +289,6 @@
         <item>evdo:4094,87380,524288,4096,16384,262144</item>
         <item>lte:2097152,4194304,8388608,262144,524288,1048576</item>
     </string-array>
-
-    <!-- Configure ethernet tcp buffersizes in the form:
-         rmem_min,rmem_def,rmem_max,wmem_min,wmem_def,wmem_max -->
-    <string name="config_wifi_tcp_buffers">524288,2097152,4194304,262144,524288,1048576</string>
 
     <!-- The list of components which should be automatically disabled for a specific device. -->
     <string-array name="config_deviceDisabledComponents" translatable="false">
